Fix tablet (768px) homepage overflow on right image

--- a/src/layouts/app.scss
+++ b/src/layouts/app.scss
@@ -60,6 +60,7 @@ main div.inner {
 
    @media screen and (min-width: 768px) {
       padding: 0;
+      overflow: hidden;
    }
 
    &.home {
